deploy/prd/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bd-prd-web-service
  namespace: default
spec:
  selector:
    app: bd-prd-web
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
