deploy/prd/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bd-dvp-web-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: bd-dvp-web-service
                port:
                  number: 8000
            path: /webdev(/|$)(.*)
            pathType: Prefix
